<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PHOTOSYNQ</string>
    <string name="discover_title">Discover</string>
    <string name="my_projects_title">My Projects</string>
    <string name="quick_measurement_title">Quick Measurement</string>
    <string name="sync_settings_title">Sync Settings</string>
    <string name="profile_title">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="server_not_reachable">PhotosynQ.org is unreachable."\n\n" Check if your internet connection requires a password or sign in.</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_sending_data">There was a problem saving your data with Photosynq server, But your data is safe and we will try to save it again in %1$s minutes.</string>
    <string name="title_activity_quick_measurment">Measurement Details</string>
    <string name="start_measurement">Click to start measurement</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_connected_to">Connected: </string>
    <string name="title_not_connected">Not connected</string>
    <string name="title_activity_display_results">DisplayResultsActivity</string>
    <string name="title_activity_project_details">ProjectDetailsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="searchNewDevice">Search devices</string>
    <string name="searching_devices">Searching devices...</string>
    <string name="result_discarded">Results discarded.</string>
    <string name="btn_get_directions">Get directions</string>
    <string name="btn_take_measurement">+ Take Measurement</string>
    <string name="connected">Connected, Click to start measurement</string>
    <string name="start_date_lbl">Start Date:</string>
    <string name="end_date_lbl">End Date:</string>
    <string name="beta_lbl">Beta:</string>
    <string name="directions_to_collab">Directions to collaborators</string>
    <string name="title_activity_project_data">ProjectDataActivity</string>
    <string name="title_activity_directions">Directions</string>
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <string name="selectFromWeb">Set of answers cannot be changed here.  If you are the project lead, you can change the set of answers by editing the project</string>
    <string name="closebtn">Ok</string>
    <string name="title_activity_display_cached_data_points">Cached Data Points</string>
    <string name="title_activity_user_defined_question">UserDefinedQuestion</string>
    <string name="title_activity_project_defined_question">Project Defined Question</string>
    <string name="title_activity_scancode_question">Scancode Question</string>
    <string name="title_activity_auto_incr_question">Auto Incr Question</string>
    <string name="title_activity_review_questions">Review Questions</string>
    <string name="title_activity_questions_list">Questions</string>
    <string name="pleaseselectanswer">Please Select Answer</string>
</resources>
